# affy

./: DESCRIPTION  NAMESPACE  NEWS  R_PROFILE.R  TITLE  aclocal.m4  changelog  configure  configure.in
R/: AffyBatch.R  AffyRNAdeg.R  ProbeSet.R  ProgressBarText.R  avdiff.R  barplot.ProbeSet.R  bg.Affy.chipwide.R  bg.R  expresso.R  fit.li.wong.R  generateExprVal.method.avgdiff.R  generateExprVal.method.liwong.R  generateExprVal.method.mas.R  generateExprVal.method.medianpolish.R  generateExprVal.method.playerout.R  getCDFenv.R  justrma.R  loess.normalize.R  maffy.R  mas5.R  merge.AffyBatch.R  mva.pairs.R  normalize.constant.R  normalize.contrasts.R  normalize.invariantset.R  normalize.loess.R  normalize.qspline.R  normalize.quantiles.R  pairs.AffyBatch.R  plot.ProbeSet.R  plot.density.R  plotLocation.R  pmcorrect.mas.R  ppsetApply.R  read.affybatch.R  rma.R  summary.R  tukey.biweight.R  whatcdf.R  xy2indices.R  (+1 more)
data/: SpikeIn.rda  affybatch.example.rda  affybatch.example2.rda
demo/: 00Index  affy.tour.R
man/: .setAffyOptions.Rd  AffyBatch-class.Rd  AffyRNAdeg.Rd  Dilution.Rd  MAplot.Rd  ProbeSet-class.Rd  ProgressBarText-class.Rd  SpikeIn.Rd  affy-deprecated.Rd  affy-options.Rd  affy.scalevalue.exprSet.Rd  affybatch.example.Rd  barplot.ProbeSet.Rd  bg.adjust.Rd  bgc.Rd  cdfFromBioC.Rd  cdfenv.example.Rd  cleancdfname.Rd  debug.affy123.Rd  expresso.Rd  expressoWidget.Rd  fit.li.wong.Rd  generateExprSet-methods.Rd  generateExprVal-methods.Rd  generateExprVal.method.avgdiff.Rd  generateExprVal.method.playerout.Rd  hlog.Rd  justrma.Rd  loess.normalize.Rd  maffy.subset.Rd  (+31 more)
(+24 files in other folders)
