dnl
dnl Configuration things for affyR.
dnl (http://www.cbs.dtu.dk/laurent/download/affyR/
dnl What is below (and in the other configuration fiels 
dnl was taken from different configuration scripts for R version 1.3.0.
dnl
dnl Acknowledgments: The author(s) of the R configure scripts, Kurt Hornik for the tip with autoconf.
dnl
dnl Laurent 2001


AC_INIT("DESCRIPTION")

dnl
dnl Are things (still) the same ?
dnl (taken from the 'writing R extensions manual')
dnl

R_HOME=${R_HOME}
if test -z "${R_HOME}"; then
  echo 'could not determine R_HOME'
  exit 1
fi

echo "R_HOME is ${R_HOME}"
CC=`grep "^CC" ${R_HOME}/etc/Makeconf | sed "s/^CC *= *//"`
CFLAGS=`grep "^CFLAGS" ${R_HOME}/etc/Makeconf | sed "s/^CFLAGS *= *//"`


dnl
dnl tests the zlib.h
dnl (the test is found in 'acinclude.m4')
dnl

R_ZLIB


AC_OUTPUT(src/Makevars)
